# InstantSend

./: AUTHORS  DEPENDENCIES  Makefile  Makefile.am  README  buildpackage.sh  config.h  config.h.in  configure  configure.ac  doxygen  install-debian-deps.sh  make_upstream_tarball.sh  setup-prefix.sh  upstream_files
data/: Makefile.in  autoplugins.defaults  dialog-gtk.desktop
data/config-wizard/: firstrun_sk_SK.UTF-8  wizard_sk_SK.UTF-8
data/plugins/avahi-publish/: metadata  metadata_sk_SK.UTF-8
data/plugins/dbus/: metadata  metadata_sk_SK.UTF-8  server
data/plugins/ip4tcp/: client  client_sk_SK.UTF-8  defaultcfg_server  metadata  metadata_sk_SK.UTF-8  server  server_sk_SK.UTF-8
debian/: changelog  changelog.in  control  control.lucid  control.maya  control.raspbian  instantsend-client.bash-completion  instantsend-client.install  instantsend-filemanager-caja.install  instantsend-filemanager-nautilus.install.lucid  instantsend-filemanager-nautilus.install.maya  instantsend-gtk.install  instantsend-plugin-avahi.install  instantsend-plugin-dbus.install  instantsend-plugin-ip4tcp.install  instantsend-plugin-ip6tcp.install  instantsend-plugin-notify.install  instantsend-scan.install  instantsend-scanner-avahi.install  instantsend-server.install  libinstantsend-common.install  libinstantsend-json-dev.install  libinstantsend-json.install  libinstantsend-multithread.install  libinstantsend-plugin-dev.install  libinstantsend-plugin.install  libinstantsend-pluginloading.install  libinstantsend-sysapi.install  rules
doc/: Makefile.in  code_sk.txt  doxygen.conf.in  server.cfg  usage_sk.txt  widget-gtk.cfg
doc/doxygen/html/: annotated.html  appcontrol_8h_source.html  classBPluginRef-members.html  classBPluginRef.html  classBufferPool-members.html  classBufferPool.html  classCheckUnloadCallback-members.html  classCheckUnloadCallback.html  classCondVar-members.html  classCondVar.html  classCondVar_1_1Data-members.html  classCondVar_1_1Data.html  classDeallocator-members.html  classDeallocator.html  classEPluginInvalid-members.html  classEPluginInvalid.html  classFileInfoBaseRenderer-members.html  classFileInfoBaseRenderer.html  classFileInfoItem-members.html  classFileInfoItem.html  classInternalEventHandler-members.html  classInternalEventHandler.html  classLibraryHandle-members.html  classLibraryHandle.html  classLibraryHandleWithCallback-members.html  classLibraryHandleWithCallback.html  classPluginPtr-members.html  classPluginPtr.html  classPosixCondVarData-members.html  classPosixCondVarData.html  classPosixLibraryHandle-members.html  classPosixLibraryHandle.html  classPosixSemaphoreData-members.html  classPosixSemaphoreData.html  classSemaphore-members.html  classSemaphore.html  classSemaphore_1_1Data-members.html  classSemaphore_1_1Data.html  classSimpleFileInfoRenderer-members.html  classSimpleFileInfoRenderer.html  (+202 more)
doc/doxygen/html/search/: all_61.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6a.js  all_6c.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  (+33 more)
doc/doxygen/latex/: annotated.tex  classFileInfoBaseRenderer.eps  classFileInfoBaseRenderer.tex  classFileInfoItem.tex  classSimpleFileInfoRenderer.eps  classSimpleFileInfoRenderer.tex  classasyncDataCallback__t.eps  classasyncDataCallback__t.tex  classasyncDataReceiver__t.tex  classclientThread__t.eps  classclientThread__t.tex  classconnectionCreator__t.eps  classconnectionCreator__t.tex  classconnectionStatus__t.tex  classdataFragment__t.tex  classdbusConnectionHandle.eps  classdbusConnectionHandle.tex  classdialogControl.eps  classdialogControl.tex  classehCreator__t.eps  classehCreator__t.tex  classeventConnections__t.eps  classeventConnections__t.tex  classeventData__t.tex  classeventHandlerCreator__t.eps  classeventHandlerCreator__t.tex  classeventProgress__t.eps  classeventProgress__t.tex  classeventReceive__t.eps  classeventReceive__t.tex  classeventRegister__t.eps  classeventRegister__t.tex  classeventSend__t.eps  classeventSend__t.tex  classeventSink__t.eps  classeventSink__t.tex  classevent__t.eps  classevent__t.tex  classfileController__t.eps  classfileController__t.tex  (+98 more)
examples/: client.cfg  server.cfg
filemanagers/: Makefile
filemanagers/caja/: Makefile.in  caja-nste.c  caja.c
filemanagers/caja/po/: en.po  en.pot  sk.po
filemanagers/nautilus/: Makefile.in  nautilus-nste.c  nautilus-nste.h  nautilus.c
filemanagers/nautilus/po/: en.po  en.pot  sk.po
include/: Makefile.in  file.h  json.h  pluginapi.h
plugins/: Makefile  Makefile.in  avahi-publish.cpp  dbus.cpp  desktop-notify.cpp  gnome-keyring.cpp  ip4tcp-posix.cpp  ip4tcp-windows.cpp  ip4tcp.cpp  ip4tcps-posix.cpp  ip4tcps-windows.cpp  ip6tcp-posix.cpp  ip6tcp.cpp  mate-keyring.cpp  ssp.cpp  zenityprogress.cpp
po/: Makefile  Makefile.in
po/widget-gtk/: Makefile  Makefile.in  en.mo  en.po  en.pot  sk.mo  sk.po
scripts/: Makefile.in  bash-completion.sh  instsend-avahi.sh  instsend-config-defaults.in  instsend-config-wizard.in  instsend-gtk-wrapper.in  instsend-scan.in  instsendd-wrapper.sh  isend-cli.sh  isend-gtk.sh
src/: Makefile  Makefile.in  appcontrol.h  client.cpp  configtool.cpp  connectionreceiver.cpp  connectionreceiver.h  datareceiver.cpp  datareceiver.h  debug.h  eventsink.cpp  eventsink.h  fifolock.c  file-common.cpp  filelist.cpp  filelist.h  filewriter.cpp  filewriter.h  internalevents.cpp  internalevents.h  jal.cpp  json.cpp  logger.cpp  logger.h  messages.h  multithread.h  plugin-common.cpp  plugin.cpp  plugin.h  pluginlist.cpp  pluginlist.h  pluginloader.cpp  pluginloader.h  securestorage.cpp  securestorage.h  server.cpp  serverfilelist.cpp  serverfilelist.h  serverlist.cpp  serverlist.h  (+2 more)
src/sysapi/linux/: appcontrol-platformdependent.cpp  misc.cpp  multithread.cpp  pluginloader-linux.cpp  pluginloader.cpp
src/sysapi/posix/: appcontrol-platformdependent.cpp  file.cpp  misc.cpp  multithread.cpp  pluginloader-posix.cpp  posix-appcontrol.h
src/sysapi/windows/: appcontrol-platformdependent.cpp  file.cpp  misc.cpp  multithread.cpp  pluginloader-windows.cpp  windows-appcontrol.h
